finished! free at last!

--- a/main.tex
+++ b/main.tex
@@ -11,13 +11,11 @@
 \setdefaultlanguage{english}
 \usepackage[en-US]{datetime2}
 
-\newcommand{\shorttitle}{???}
-
 \newcommand{\ldjin}{\textit{Long Day's Journey Into Night}}
 \newcommand{\oneill}{O'Neill}
 
 \usepackage{titling}
-\title{???}
+\title{The ghosts of the four \oneill{}s, and all of Ireland}
 \author{Phoebe Goldman}
 \date{\DTMDate{2020-05-13}}
 
@@ -35,14 +33,14 @@
   \enquote{locations.} My sincerest apologies.}
 \end{center}}
 
-\usepackage[margin=1in, headheight=14.5pt]{geometry}
+\usepackage[margin=1.1in, headheight=14.5pt]{geometry}
 
 \usepackage{fancyhdr}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \fancyhf{}
 \cfoot{\thepage}
-\rhead{\shorttitle}
+\rhead{\thetitle}
 \lhead{\theauthor}
 \pagestyle{fancy}
 
@@ -85,13 +83,15 @@ performances I've ever seen. Looking back now, with a few more years under my
 belt and a nose buried in \oneill{}'s text, I see not only the stunning
 portrayal of a deeply dysfunctional family who are nonetheless bound together
 by their love for one another, but also the construction of an Irish-American
-national identity and a serious attempt to cope with the roles of alcohol and
-alcohol abuse within that community. \oneill{} wrestles throughout his largely
-autobiographical work with competing conceptions of Ireland both as a beautiful
-homeland and as a poverty-ridden swamp, with Irish-Americans both as successful
-hardworking citizens and as undesirable drunks, with memory both as fond
-recollection and as painful haunting, and with alcohol both as a heartening
-tonic and as an inescapable disease.
+national identity and a serious attempt to cope with the roles of poverty and
+generational trauma within that community.  \oneill{} wrestles throughout his
+largely autobiographical work with competing conceptions of Ireland both as a
+beautiful homeland and as a poverty-ridden swamp and with the tension between
+experiencing the hurtful actions of one's parents and understanding how they
+were hurt, in turn, by their parents. \oneill{}'s twin goals (perhaps the first twin
+is larger than the second...) were to forgive his now-deceased parents, freeing
+himself of their ghosts, and to share that understanding and forgiveness with
+the community of Irish-Americans who struggle with the same ghosts.
 
 Before all that, though, it is worth nothing a few features of \ldjin{} which
 make it unique among plays. Firstly, it is, at least to some extent,
@@ -263,6 +263,76 @@ poverty and his anger from abandonment. In showing this, \oneill{} makes the
 struggle to understand ones' parents central to Irish-American identity, and
 invites those of his audience who share that identity to share in that
 struggle.
+
+\section{But how would I do it?}
+
+Staging a Naturalistic or Realistic production of \ldjin{} is challenging
+because of its unusual stage directions, though it seems clear to me that it is
+intended to be in the style of Realism. That style isn't compelling to me,
+though, and so I wouldn't do it. Instead, I would attempt something more in the
+style of Brecht's Epic Theater. Since there is no longer a large body of
+Irish-Americans with a distinct national identity from other Americans, I think
+I'm a good deal too late to make my production focus on that aspect of the
+text, despite it having the bulk of my essay. Instead, my performance would be
+more explicitly biographical. To that effect, I would change back \oneill{}'s
+name changes; the characters in my play would be James, Mary, Jamie and Eugene
+\oneill{}.
+
+My production would not attempt to recreate the Tyrones' summer home beneath a
+proscenium arch; rather, it would feature a mostly bare thrust stage with a few
+small sections of wall, each holding either a door or a window. Between them
+would be set a few nondescript chairs around a small table. I'd want to try it
+both with and without, but I suspect I'd also end up placing one larger chair,
+more like a recliner, somewhere, for the moment when Mary sits on Eugene's lap,
+and for Jamie to collapse into in the final act. Beyond this, the only props or
+set pieces would be those with which the characters interact during the play,
+which to my memory is just three liquor bottles, a pitcher of water and a few
+glasses. I'd choose to keep my set simple primarily because I think that trying
+to follow \oneill{}'s directions would be both too much work and a futile
+endeavor. To communicate what the audience should be imagining onstage, I would
+have Eugene read the stage directions. Whenever he did, lights would quickly
+dim and a spotlight would illuminate just him. These wouldn't be so dramatic
+that it would be hard to see everyone else, just enough to emphasize that
+something different was happening. Eugene would, if possible in the moment,
+turn to the audience, and read the stage directions aloud, with the
+modification that lines describing himself would be changed from third to first
+person. For stage directions which describe actions taken without dialogue, the
+actors (incl. Eugene) would take them as he spoke, and for those that described
+delivery, they would wait for him to finish, the lights would return to normal,
+and they would proceed. I think I would end the play by having him read (a
+slightly amended version of) its dedication to Charlotta, again changing the
+name Tyrone to \oneill{}. Lights would dim, more than prior times, but still
+you could see the three other \oneill{}s walk offstage, and then the spotlight
+would hit Eugene, and he would say, \textquote[{\cite[loc. 87]{ldjin}}]{Dearest
+  \textins{Carlotta}: I give you this play of old sorrow, written in tears and
+  blood. A sadly inappropriate gift, it would seem, for a day celebrating
+  happiness. But you will understand. I mean it as a tribute to your love and
+  tenderness which gave me the faith and love that enabled me to face my dead
+  at last and write this play---write it with deep pity and understanding and
+  forgiveness for all the four haunted \oneill{}s. \textelp{} \textins{Love,}
+  Gene}. Then the lights would cut out for real, Eugene would walk off, the
+audience would clap, curtain call, etc.
+
+Again, I'd like to see how it would play before committing to this, but I'd
+also try an even further pull from Brecht's book, and use some projectors to
+display some added biographical information as the play went on. For example,
+during Jamie and Eugene's dialogue in Act Four, when Jamie talks about wanting
+to drink himself unconscious, saying,
+\textquote[{\cite[loc. 2271]{ldjin}}]{Can't \textins{pass out}, that's
+  trouble. Had enough to sink a ship, but can't sink. Well, here's
+  hoping. \textit{he drinks}}, a projection would appear reading,
+\enquote{Jamie \oneill{} drank himself to death 11 years later in 1922.}
+
+I hope, taken together, that these choices would help to make an audience
+realize that \ldjin{} is \oneill{}'s attempt to do the thing Mary told him to
+in Act Three, namely, to understand and to forgive. I think that's the most
+important feature of this play by a wide margin, but I chose to write the first
+part of my essay about Irish-American nationalism instead because of the
+assignment that we \enquote{advance an original argument,} since it's hardly a
+new claim to say that \oneill{} is using this play to do exactly the thing he
+says he's doing in his dedication. On the other hand, though, I didn't worry
+too much about anything else in the assignment, so maybe I should've just
+written the paper that was obvious to me.
 
 \printbibliography{}
 \end{document}
